<resources>
    <string name="app_name">MDP Messenger</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="username">Username</string>
    <string name="channel_name">Message_notification_channel</string>
    <string name="channel_description">channel to notify</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register_here">Register</string>
    <string name="reset">Reset</string>
    <string name="click_to_reset_info">By clicking RESET, you will recive an email to reset your password</string>
</resources>