<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswdActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_reset_psswd"
        layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding= "10dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/reset"
            android:background="@color/design_default_color_primary_dark"
            android:id="@+id/btn_reset"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/click_to_reset_info"
            />
    </LinearLayout>


</LinearLayout>